// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Blog Post does not render category when not provided 1`] = `
<DocumentFragment>
  <div
    class="layoutMock"
  >
    <div
      class="css-43plg"
    >
      <div
        class="css-1qfp07i"
      >
        <article
          class="h-entry c1v0-blog-post"
          id="mock-post-id"
        >
          <h1
            class="p-name css-1sus4jf"
          >
            A Mock Blog Post
          </h1>
          <div
            class="css-1pa74su"
          >
            <time
              class="dt-published created"
            >
              Published Mon, 17 Jun 2024 03:30:26 GMT
            </time>
          </div>
          <div
            style="display: none;"
          >
            <a
              class="u-url"
              href="https://example.com/blog/mock-post"
            />
            <span
              class="u-uid"
            >
              mock-post-id
            </span>
            <div
              class="p-summary"
            >
              This is a mock description
            </div>
            <img
              alt=""
              class="u-photo"
              src="mock-banner.jpg"
            />
            <span
              class="p-category"
            >
              mock
            </span>
            <span
              class="p-category"
            >
              test
            </span>
            <span
              class="p-category"
            >
              blog
            </span>
          </div>
          <div
            class="e-content article-content"
          >
            <div>
              Lorum ipsum dolor sit amet.
            </div>
          </div>
        </article>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Blog Post matches the snapshot 1`] = `
<DocumentFragment>
  <div
    class="layoutMock"
  >
    <div
      class="css-43plg"
    >
      <div
        class="css-1qfp07i"
      >
        <article
          class="h-entry c1v0-blog-post"
          id="mock-post-id"
        >
          <div
            class="css-vktbzg"
          >
            Mock category
          </div>
          <h1
            class="p-name css-1sus4jf"
          >
            A Mock Blog Post
          </h1>
          <div
            class="css-1pa74su"
          >
            <time
              class="dt-published created"
            >
              Published Mon, 17 Jun 2024 03:30:26 GMT
            </time>
          </div>
          <div
            style="display: none;"
          >
            <a
              class="u-url"
              href="https://example.com/blog/mock-post"
            />
            <span
              class="u-uid"
            >
              mock-post-id
            </span>
            <div
              class="p-summary"
            >
              This is a mock description
            </div>
            <img
              alt=""
              class="u-photo"
              src="mock-banner.jpg"
            />
            <span
              class="p-category"
            >
              Mock Category
            </span>
            <span
              class="p-category"
            >
              mock
            </span>
            <span
              class="p-category"
            >
              test
            </span>
            <span
              class="p-category"
            >
              blog
            </span>
          </div>
          <div
            class="e-content article-content"
          >
            <div>
              Lorum ipsum dolor sit amet.
            </div>
          </div>
        </article>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Blog Post renders Seo component with the correct props 1`] = `
<DocumentFragment>
  <div
    class="seoMock"
  >
    <script
      type="application/ld+json"
    >
      {"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://www.chrisvogt.me"},{"@type":"ListItem","position":2,"name":"Mock Category","item":"https://www.chrisvogt.me/Mock Category"},{"@type":"ListItem","position":3,"name":"A Mock Blog Post"}]}
    </script>
  </div>
</DocumentFragment>
`;
